css/main.css
/*! HTML5 Boilerplate v7.0.1 | MIT License | https://html5boilerplate.com/ */

/* main.css 1.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

 
/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

   html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}




 /* ==========================================================================
   Author's custom styles
   ========================================================================== */

 * { box-sizing: border-box }
body, html { 
    background: #056352;
    color: #FFF; 
    font-family: Roboto, sans-serif;
    font-size: 16px;
    line-height: 140%;
 scroll-behavior: smooth;
 overflow-x: hidden;
}

h1 { 
    font-weight: 300;
text-transform: uppercase;
letter-spacing: 8px;
color: rgba(255,255,255,0.8);
padding: 0 0 1em 0;
}
.content { 
    width: 100vw; 
    max-width: 1170px;
    padding: 15px;
    margin: 0 auto;
    text-align: center;
}
textarea { 
    border: 0;
    background: rgba(255,255,255,0.4);
    padding: 1em;
    width: 100%;
    height: 170px;
    display: block;
    margin-bottom: 1.618em;
}

.panel-result { 
    
    padding: 15px;  
    font-size: 2em;
    line-height: 140%;
}
.placeholder { 
    font-style: italic;
    color: rgba(255,255,255,0.4);
}

footer { 
    margin-top: 10vh;
}
footer ul { 
    text-align: center;
    margin: 0 auto;
    padding: 0;
    width: 100%;
        max-width: 500px;
}
footer li { 
    list-style: none;
    display: inline-block; 
}
footer li a { 
    padding: 1em;
    color: rgba(255,255,255,0.3);
    text-decoration: none;
    text-transform: uppercase
}

footer li a:hover { 
    border-bottom: 1px solid rgba(255,255,255,0.5);
    color:  rgba(255,255,255,0.5);
}

section.about { 
    width: 100vw;
    height: 100vh;
    position: relative;
}
section.about .about-content { 
    position: absolute; 
    top: 50%; 
    left: 50%;
    transform: translate(-50%,-50%);
}


.about-content h3 { 
    border-bottom: 1px solid rgba(255,255,255,0.2);
    padding: 0 0.2em .6em;
}
.about-content p { 
    color: rgba(255,255,255,0.6);
    padding-bottom: 10px;
}

.about-content a 
{ color: #c3c3c3; 
    border-bottom: transparent 1px solid; 
    text-decoration: none; 
    transition: border 0.1s ease  
}

.about-content a:hover { 
    border-bottom: #c3c3c3 1px solid; 
    text-decoration: none; 
}
@media screen and (min-width: 768px) {
    .about-content,
    .content { 
        width: 76.8vw; 
    }

.content { 
    position: relative;
    top: 50%;
    transform: translatey(-50%);
    }

.body-wrapper { 
    position: relative;
    height: 100vh;
    width: 100vw;
}
}










 /* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

 .hidden {
  display: none !important;
}

/*
* Hide only visually, but have it available for screen readers:
* https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
*
* 1. For long content, line feeds are not interpreted as spaces and small width
*    causes content to wrap 1 word per line:
*    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
*/

.visuallyhidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap; /* 1 */
}

/*
* Extends the .visuallyhidden class to allow the element
* to be focusable when navigated to via the keyboard:
* https://www.drupal.org/node/897638
*/

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  width: auto;
  white-space: inherit;
}

/*
* Hide visually and from screen readers, but maintain layout
*/

.invisible {
  visibility: hidden;
}

/*
* Clearfix: contain floats
*
* For modern browsers
* 1. The space content is one way to avoid an Opera bug when the
*    `contenteditable` attribute is included anywhere else in the document.
*    Otherwise it causes space to appear at the top and bottom of elements
*    that receive the `clearfix` class.
* 2. The use of `table` rather than `block` is only necessary if using
*    `:before` to contain the top-margins of child elements.
*/

.clearfix:before,
.clearfix:after {
  content: " "; /* 1 */
  display: table; /* 2 */
}

.clearfix:after {
  clear: both;
}

 
/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

   @media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 1.25dppx),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

 
/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   https://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

   @media print {
    *,
    *:before,
    *:after {
        background: transparent !important;
        color: #000 !important; /* Black prints faster */
        -webkit-box-shadow: none !important;
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
     */

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre {
        white-space: pre-wrap !important;
    }
    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    /*
     * Printing Tables:
     * http://css-discuss.incutio.com/wiki/Printing_Tables
     */

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

